--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -610,6 +610,7 @@ permissions:
         children:
             mcmmo.bypass.arcanebypass: true
             mcmmo.bypass.hardcoremode: true
+            mcmmo.bypass.kraken: true
             mcmmo.commands.inspect.far: true
             mcmmo.commands.inspect.offline: true
     mcmmo.bypass.arcanebypass:
@@ -618,6 +619,9 @@ permissions:
     mcmmo.bypass.hardcoremode:
         default: false
         description: Allows user to bypass negative penalties of Hardcore mode
+    mcmmo.bypass.kraken:
+        default: false
+        description: Allows user to bypass the effects of the exploit prevention when Fishing
     mcmmo.bypass.inspect.distance:
         default: false
         description: Allows user to bypass Inspect's distance requirements
