Smelting now works with custom ores.
Also fixed exploit where smelting XP could be awarded for some
non-smeltable materials.

--- a/src/main/resources/mods/blocks.yml
+++ b/src/main/resources/mods/blocks.yml
@@ -28,10 +28,12 @@ Mining:
         XP_Gain: 99
         Double_Drops_Enabled: true
         Is_Ore: true
+        Smelting_XP_Gain: 9
     Block_2|0:
         XP_Gain: 99
         Double_Drops_Enabled: true
         Is_Ore: true
+        Smelting_XP_Gain: 9
 
 #
 #  Settings for Custom Woodcutting Blocks
